--- a/AgnaPanel/Properties/Resources.resx
+++ b/AgnaPanel/Properties/Resources.resx
@@ -118,13 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="agnascene_clean" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\agnascene_clean.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="agna_wing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\agna-wing.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="agna_wing_flat_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\agna-wing-flat-red.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="agnascene_clean" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\agnascene_clean.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="music_note" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\music_note.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="right_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\right-arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="swap_camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\swap_camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="swap_characters" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\swap_characters.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="swap_players" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\swap_players.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="settings_clean" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\settings_clean.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="challonge" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\challonge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
